fix main page body gap

--- a/postcss/_body.css
+++ b/postcss/_body.css
@@ -29,6 +29,12 @@
       color: #333333;
       text-align: center;
       text-transform: uppercase;
+
+      .body_main & {
+        max-width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+      }
     }
 
     .body__content {
@@ -86,6 +92,11 @@
 
   .body__description {
     margin-top: 30px;
+
+    .body_main & {
+      max-width: none;
+    }
+
   }
     .body__head {
       max-width: 440px;
